# emunes

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  skeleton.ll  skeleton.rs
src/: apu.rs  cartridge.rs  joystick.rs  lib.rs  main.rs  mapper.rs  memory.rs  ppu.rs  video.rs
src/apu/: pulse.rs
src/cpu/: bcd.rs  flags.rs  instrs.rs  memory.rs  mod.rs
src/cpu/backend/: interpreter.rs  llvm.rs  mod.rs
src/cpu/backend/llvm/: ee.rs
src/cpu/memory/: debug.rs
src/mapper/: m0.rs  m1.rs  m2.rs
src/ppu/: memory.rs  nametable.rs  oam.rs  palette.rs  registers.rs  render.rs  tiles.rs
src/ppu/registers/: address.rs  controller.rs  mask.rs  scroll.rs  status.rs
src/video/: palette.rs
tests/: basic.rs  functional.rs
