[package]
name = "emunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
log = "0.4.20"
pixels = "0.13.0"
simple_logger = "4.3.3"
thiserror = "1.0.57"
vector_mapp = "0.3.3"
wgpu = "0.19.1"
winit = { version = "0.29.10", features = ["rwh_05"] }
flexi_logger = "0.27.4"
