[package]
name = "emunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
llvm = ["dep:inkwell"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.20"
pixels = "0.13.0"
simple_logger = "4.3.3"
thiserror = "1.0.57"
vector_mapp = "0.3.3"
wgpu = "0.19.1"
winit = { version = "0.29.10", features = ["rwh_05"] }
flexi_logger = "0.27.4"
inkwell = { version = "=0.4.0", features = ["llvm17-0"], optional = true }

[build-dependencies]
cmake = "0.1.50"
color-eyre = "0.6.2"
dirs = "5.0.1"
reqwest = { version = "0.11.24", features = ["blocking"] }
tar = "0.4.40"
xz2 = "0.1.7"
